--- a/01-background.Rmd
+++ b/01-background.Rmd
@@ -17,68 +17,99 @@ bibliography: references.bib
 \markboth{Background}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
-## Disease surveillance and small-area estimation
+## Small-area estimation
 
-* Disease surveillance is a central application of statistics
-* Small-area estimation in health, epidemiology and environment
-* The Small-Area Health Statistics Unit at Imperial was set-up to monitor health around point sources of environmental pollution in response to the Sellafield enquiry into the increased incidence of childhood leukemia leukaemia near a nuclear reprocessing plant [@elliott1992small]. This research has a focus on ratios of observed events to expected events, and testing hypothesis about hot-spots.
+Small-area estimation methods aim to estimate population indicators for subgroups, typically in situations where direct estimates perform poorly due to data limitations.
+These subgroups may often correspond to small geographic areas.
+Small-area estimation methods have been used in a wide range of fields.
+The Small-Area Health Statistics Unit (SASHU) at Imperial College London was set-up to monitor health around point sources of environmental pollution in response to the Sellafield enquiry into the increased incidence of childhood leukemia leukaemia near a nuclear reprocessing plant [@elliott1992small].
+The research of SASHU has a focus on ratios of observed events to expected events, and testing hypothesis about hot-spots.
 
-## HIV/AIDS
+## The HIV/AIDS epidemic
 
-* HIV/AIDS has a large disease burden
-* The disease burden is unevenly distributed in space and across communities and individuals
-* Surveillance techniques and statistical models have been used to respond to the epidemic
-* Key HIV indicators are HIV prevalence, HIV incidence, ART coverage and coverage of other interventions such as PrEP, PEP
-* Data difficulties including sparsity in space and time, survey bias, conflicting information sources, hard to reach populations, demography
-* Aims for HIV response going forward, and surveillance capabilities are needed to meet them
-* Phasing out of nationally-representative household surveys for HIV
-  * Bayesian survey design
-* Importance of relying on multiple sources of information
-  Creates requirement for for complex models e.g. evidence synthesis, Naomi, multivariate models
-* Why isn't case-based surveillance included yet?
-  * There aren't individual linked databases and patient records have to be consolidated
-  * Passive case-based surveillance
-  * Post-hoc matching and create a case-based surveillance record
-* Drivers of transmission
-* Possible interventions are ART, condoms, PrEP and PEP, education, economic empowerment, VMMC
-* Geographic priorisation versus demographic priorisation: hotspots, key populations, screening and individual level risk characteristics
-* Adolescent girls and young women identified as a key demographic, stratification by sexual risk
-* Interventions more likely to be demographic specific rather than geographic specific so if majority of difference in effectiveness depends on intervention type then demographic targeting may be more priority
-* The population strategy of Geoffrey Rose 
+```{r}
+plhiv2022 <- 38000000
+deaths2022 <- 700000
+infections2022 <- 1700000
+```
+
+According to latest estimates, in 2022 `r xfun::numbers_to_words(plhiv2022)` people are living with HIV, there were `r xfun::numbers_to_words(deaths2022)` AIDS-related deaths, and there were `r xfun::numbers_to_words(infections2022)` people newly infected with HIV.
+Surveillance is used is conducted to track epidemic trends, identify at-risk populations, find drivers of transmission, and evaluate the impact of prevention and treatment programs.
+Sub-Saharan Africa is the most affected region.
+Within sub-Saharan Africa, disease burden is unevenly distributed in space and across communities and individuals.
+Key populations include men who have sex with men, female sex workers, people who inject drugs, transgender people, incarcerated people.
+Larger demographic groups of higher risk include adolescent girls and young women.
+Key HIV indicators are HIV prevalence, HIV incidence, coverage of ART and other interventions.
+Key interventions are ART, condoms, PrEP and PEP, education, economic empowerment, VMMC.
+
+There are significant data related difficulties associated with furnishing these estimates.
+These include sparsity in space and time, survey bias, conflicting information sources, hard to reach populations, changing demographies.
+These data limitations foreground the importance of synthesising multiple sources of information to obtain estimates.
+Doing so increases the difficulty and complexity of the statistical modelling required.
+
+Aims for HIV response going forward, and surveillance capabilities are needed to meet them.
+Phasing out of nationally-representative household surveys for HIV.
+
+Methods for prevention prioritisation include geographic, demographic, key population services, risk screening, individual-level risk characteristics.
+Are there differences in effectiveness of treatments for different groups.
+
+The population strategy [@rose2001sick] is based on reducing risk factors across an entire population.
+The individual strategy focuses on prevention in high-risk individuals.
+
+<!-- Why isn't case-based surveillance included yet? -->
+<!-- There aren't individual linked databases and patient records have to be consolidated. -->
+<!-- Passive case-based surveillance. -->
+<!-- Post-hoc matching and create a case-based surveillance record. -->
 
 ## Bayesian spatio-temporal statistics
 
-* The practice of doing Bayesian statistics primarily concerns construction of a generative model for the data we observe
-* In spatio-temporal statistics, the data is indexed by spatial and or temporal location
-* The independent and identically distributed (IID) assumptions commonly used for observations are rarely suitable in the spatio-temporal setting
-* We expect there to be spatio-temporal structure
-* Given a generative model, computation of the posterior distribution proceeds using approximate Bayesian inference methods
-* Markov chain Monte Carlo (MCMC) is the most popular approach and works by simulating samples from a Markov chain which by construction has stationary distribution equal to the distribution of interest
-* Variational Bayes approaches assume the posterior distribution belongs to some class and use optimisation to choose the best member of that class
-* Laplace approximation and integrated nested Laplace approximation
-* Empirical Bayes
-* Definition of a latent Gaussian model [@rue2009approximate]
-\begin{alignat}{2}
-&\text{(Observations)}     &        y_i &\sim p(y_i \, | \, x_i, \btheta), \quad i = 1, \ldots, n, \label{eq:data} \\
-&\text{(Latent field)}     &        \x &\sim \mathcal{N}(\x \, | \, \mathbf{0}, \mathbf{Q}(\btheta)^{-1}), \label{eq:process} \\
-&\text{(Parameters)}       & \qquad \btheta &\sim p(\btheta), \label{eq:parameters}
-\end{alignat}
-  * Common examples
-* Examples of models used in HIV inference which are close to being latent Gaussian models, but aren't, and hence can't be fit using INLA
-  * Disaggregation models
-  * Evidence synthesis models like Naomi [@eaton2021naomi; @eaton2019joint]
-  * Compartmental models
-  * ART attendance models
-  * Multinomial models like for district-level risk factors
-    * Multinomial logistic regression
-* Other complex models from [ecology](https://www.bioss.ac.uk/rsse/2013/September2013slides-Illian.pdf) that can't currently be fit using INLA
-* Definition of extended latent Gaussian models [@stringer2021fast]
-  * Many-to-one is not an issue for `R-INLA`, the latent field is implemented as a concatenation of many vectors already. For example, for $\eta_i = \beta_0 + \phi_i$ with $i = 1, \ldots, n$ the latent field is $(\eta_1, \ldots, \eta_n, \beta_0, \phi_1, \ldots, \phi_n)^\top$ of dimension $2n + 1$
-  * For additive models, the only non-linearity is in the link function
-* Particular properties of spatio-temporal models (and LGMs) which make INLA, if feasible, often the best option
-* The increasing popularity of empirical Bayes approaches, like Template Model Builder [@osgoodzimmerman2021statistical]
-* Adaptive Gauss Hermite quadrature (AGHQ), like the central composite design (CCD) and grid strategies, is one way to choose the hyper-parameter integration points in the integrated nested Laplace approximation (INLA)
-* Finn Lindgren is working on a method for non-linear predictors, called the [iterative INLA method](https://github.com/inlabru-org/inlabru/blob/55896f10d563c14e34cab577b29b733aac051f86/vignettes/method.Rmd)
-  * More [slides](https://informatique-mia.inrae.fr/reseau-resste/sites/default/files/2020-09/slides-Lindgren_Avignon2018.pdf) here
-* Thesis work of [Follestad](https://cds.cern.ch/record/639625/files/sis-2003-305.pdf) that stayed as a preprint
-* How does the ecological fallacy relate to aggregated output models
+Bayesian statistics is a statistical paradigm which, at its best, lets the analyst focus their attention on modelling the data at hand.
+In particular, the primary concern is construction of a generative model for the observed data $y$ 
+$$
+(y, \vartheta) \sim p(y, \vartheta).
+$$
+
+Given a generative model, computation of the posterior distribution
+$$
+p(\vartheta \, | \, y) = \frac{p(y \, | \, \vartheta) p(\vartheta)}{p(y)}
+$$
+proceeds using approximate Bayesian inference methods.
+Markov chain Monte Carlo (MCMC) is the most popular approach, and proceeds by simulating samples from a Markov chain with stationary distribution equal to the distribution of interest.
+Variational Bayes approaches assume the posterior distribution belongs to some class and use optimisation to choose the best member of that class.
+Particular properties of spatio-temporal models make integrated nested Laplace approximations, if feasible, often the best option
+Empirical Bayes approaches, like Template Model Builder [@osgoodzimmerman2021statistical].
+
+In spatio-temporal statistics the data we observe are indexed by spatial or temporal location.
+The independent and identically distributed (IID) assumptions commonly used for observations are rarely suitable in this setting because we expect there to be spatio-temporal structure.
+Split the parameters $\vartheta = (x, \theta)$.
+Call $x$ the latent field.
+Call $\theta$ the hyperparameters.
+Often, the latent field is assumed to be jointly multivariate Gaussian.
+
+Latent Gaussian models [@rue2009approximate] are of the form
+\begin{align*}
+y_i &\sim p(y_i \, | \, \eta_i, \theta_1), \quad i \in [n]\\
+\mu_i &= \mathbb{E}(y_i \, | \, \eta_i) = g(\eta_i), \\
+\eta_i &= \beta_0 + \sum_{l = 1}^{p} \beta_j z_{ji} + \sum_{k = 1}^{r} f_k(u_{ki}),
+\end{align*}
+where $[n] = \{1, \ldots, n\}$.
+The response variable is $y = (y)_{i \in [n]}$ with likelihood $p(y \, | \, \eta, \theta_1) = \prod_{i = 1}^n p(y_i \, | \, \eta_i, \theta_1)$, where $\eta = (\eta)_{i \in [n]}$.
+Each response has conditional mean $\mu_i$ with inverse link function $g: \mathbb{R} \to \mathbb{R}$ such that $\mu_i = g(\eta_i)$.
+The vector $\theta_1 \in \mathbb{R}^s$, with $s_1$ assumed small, are additional parameters of the likelihood.
+The structured additive predictor $\eta_i$ may include an intercept $\beta_0$, linear effects $\beta_j$ of the covariates $z_{ji}$, and unknown functions $f_k(\cdot)$ of the covariates $u_{ki}$.
+The parameters $\beta_0$, $\{\beta_j\}$, $\{f_k(\cdot)\}$ are each assigned Gaussian priors.
+It is convenient to collect these parameters into a vector $x \in \mathbb{R}^N$ called the latent field such that $x \sim \mathcal{N}(0, Q(\theta_2)^{-1})$ where $\theta_2 \in \mathbb{R}^{s_2}$ are further parameters, again with $s_2$ assumed small.
+Let $\theta = (\theta_1, \theta_2) \in \mathbb{R}^s$ with $m = s_1 + s_2$ be all hyperparameters, with prior $p(\theta)$.
+Common examples of latent Gaussian models include the following.
+
+Many of the cutting-edge models used in small-area estimation fall outside the latent Gaussian model class.
+Examples include disaggregation models, evidence synthesis models [@eaton2019joint; @eaton2021naomi], attendance models, risk group models.
+<!-- There are other complex models from [ecology](https://www.bioss.ac.uk/rsse/2013/September2013slides-Illian.pdf) that can't currently be fit using `R-INLA` -->
+However, many of these models do fit into the class of extended latent Gaussian models [@stringer2021fast].
+By allowing many-to-one link functions, extended latent Gaussian models facilitate modelling of non-linearities.
+<!-- Strictly speaking, many-to-one is not an issue for `R-INLA`, the latent field is implemented as a concatenation of many vectors already e.g. for $\eta_i = \beta_0 + \phi_i$ with $i = 1, \ldots, n$ the latent field is $(\eta_1, \ldots, \eta_n, \beta_0, \phi_1, \ldots, \phi_n)^\top$ of dimension $2n + 1$ -->
+
+<!-- Adaptive Gauss Hermite quadrature (AGHQ), like the central composite design (CCD) and grid strategies, is one way to choose the hyper-parameter integration points in the integrated nested Laplace approximation (INLA) -->
+<!-- Finn Lindgren is working on a method for non-linear predictors, called the [iterative INLA method](https://github.com/inlabru-org/inlabru/blob/55896f10d563c14e34cab577b29b733aac051f86/vignettes/method.Rmd). More [slides](https://informatique-mia.inrae.fr/reseau-resste/sites/default/files/2020-09/slides-Lindgren_Avignon2018.pdf) here -->
+<!-- Thesis work of [Follestad](https://cds.cern.ch/record/639625/files/sis-2003-305.pdf) that stayed as a preprint -->
+<!-- How does the ecological fallacy relate to aggregated output models? -->
