--- a/02-areal-comparison.Rmd
+++ b/02-areal-comparison.Rmd
@@ -17,5 +17,51 @@ bibliography: references.bib
 \markboth{Models for spatial structure}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
-The repository for this work is [`athowes/areal-comparison`](https://github.com/athowes/areal-comparison).
+Code for the analysis in this chapter is available from [`athowes/areal-comparison`](https://github.com/athowes/areal-comparison) and supported by the R package [`arealutils`](https://athowes.github.io/arealutils).
 Include an edited version of the corresponding paper here.
+
+## Background
+
+### Areal and point data
+
+### Spatial random effects
+
+## Models based on adjacency
+
+### The Besag model
+
+### The BYM2 model
+
+## Models using kernels
+
+### The centroid kernel model
+
+### The integrated kernel model
+
+## Simulation study
+
+### Synthetic data-sets
+
+### Inferential models
+
+#### Priors
+
+#### Kernel details
+
+### Inference algorithms
+
+### Model assessment
+
+#### Continuous ranked probability score
+
+### Results
+
+## HIV prevalence study
+
+### Results
+
+## Discussion
+
+### Limitations
+
+### Conclusion
