--- a/front-and-back-matter/_abstract.Rmd
+++ b/front-and-back-matter/_abstract.Rmd
@@ -1,5 +1,5 @@
-HIV is a large problem.
+HIV remains a large problem.
 Disease burden is unevenly distributed.
 Effective public health response and prioritised prevention requires accurate, timely, high-resolution estimates of epidemic and demographic indicators.
-Complex statistical models are required to overcome significant data challenges.
+Thoughtful statistical modelling is required to overcome significant data challenges.
 In this thesis, I develop and apply Bayesian spatio-temporal methods for HIV surveillance.
