--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@
 ## thesis metadata ##
 #####################
 title: |
-  Bayesian spatio-temporal statistics for prioritised HIV prevention
+  Methods and applications of Bayesian spatio-temporal statistics for prioritised HIV prevention
 author: Adam Howes
 university: Imperial College London
 university-logo: templates/ic-small.pdf
