--- a/references.bib
+++ b/references.bib
@@ -485,3 +485,45 @@ URL= {https://www.r-inla.org/faq},
   journal={arXiv preprint arXiv:2101.04468},
   year={2021}
 }
+
+@article{rose2001sick,
+  title={Sick individuals and sick populations},
+  author={Rose, Geoffrey},
+  journal={{International Journal of Epidemiology}},
+  volume={30},
+  number={3},
+  pages={427--432},
+  year={2001},
+  publisher={Oxford University Press}
+}
+
+@article{stevens2022estimating,
+  title={{Estimating key population size, HIV prevalence, and ART coverage for sub-Saharan Africa at the national level}},
+  author={Stevens, Oliver and Sabin, Keith and Arias Garcia, Sonia and Willis, Kalai and Abdul-Quader, Abu and McIntyre, Anne and Cowan, Frances and Degenhardt, Louisa and Zhou, Jinkou and Sathane, Isabel and Boothe, Makini and Platt, Lucy and Rice, Brian and Hladik, Wolfgang and Baral, Stefan and Mahy, Mary and Eaton, Jeffrey W.},
+  year={2022}
+}
+
+@article{johnson2020thembisa,
+  title={{Thembisa version 4.3: A model for evaluating the impact of HIV/AIDS in South Africa}},
+  author={Johnson, L and Dorrington, RE},
+  journal={View Article},
+  year={2020}
+}
+
+@article{nguyen2022trends,
+	author = {Nguyen, Van Kính and Eaton, Jeffrey W.},
+	date = {2022/06/04},
+	date-added = {2022-06-17 23:34:11 -0400},
+	date-modified = {2022-06-17 23:34:11 -0400},
+	doi = {10.1186/s12889-022-13451-y},
+	id = {Nguyen2022},
+	isbn = {1471-2458},
+	journal = {BMC Public Health},
+	number = {1},
+	pages = {1120},
+	title = {{Trends and country-level variation in age at first sex in sub-Saharan Africa among birth cohorts entering adulthood between 1985 and 2020}},
+	url = {https://doi.org/10.1186/s12889-022-13451-y},
+	volume = {22},
+	year = {2022},
+	bdsk-url-1 = {https://doi.org/10.1186/s12889-022-13451-y}
+}
