--- a/04-elgm-inf.Rmd
+++ b/04-elgm-inf.Rmd
@@ -12,10 +12,10 @@ documentclass: book
 bibliography: references.bib
 ---
 
-# Fast, approximate inference for the Naomi model
+# Fast, approximate inference for the Naomi model {#elgm-inf}
 \adjustmtc
 \markboth{Fast, approximate inference for the Naomi model}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
-The repository for this work is [`athowes/elgm-inf`](https://github.com/athowes/elgm-inf).
+Code for the analysis in this chapter is available from [`athowes/elgm-inf`](https://github.com/athowes/elgm-inf) and supported by the R package [`inf.utils`](https://athowes.github.io/inf.utils).
 Include an edited version of the corresponding paper here.
